src/test/deca/syntax/valid/Objet/ListClasses-EmptyMeth.deca
// Description:
//      Syntaxically correct program with classes with attributes and empty methods
//
// Result:
//      nothing
//
// History:
//      Created in 17/1/2022

class A {
    int x;
    protected boolean x;
    void test() {
    }
}

class B {
    int x;
    protected boolean x;
}