src/test/deca/syntax/invalid/Objet/ListClasses-Class-After.deca
// Description:
//      Syntaxically incorrect program
//
// Result:
//      Parsing error on line 14
//
// History:
//      Created in 17/1/2022

{

}

class A {
    protected int x;
    int test() {

    }
    protected int y;
}
